<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_status"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statusMEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/statusMEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/status"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:met_baseColor="@color/colorWhite"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorWhite"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorWhite"
        app:met_underlineColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newStatusTextView"
        />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusMEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintTop_toBottomOf="@+id/statusMEditText" />


</android.support.constraint.ConstraintLayout>